<resources>
    <string name="app_name">myHealth</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">or</string>
    <string name="sign_in">Sign In</string>
    <string name="you_are_signed_in">You Are Signed In</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="email_verification_sent">Your email verification has sent! Please open your email.</string>
    <string name="write_file">File</string>
    <string name="sign">Sign</string>
    <string name="verify">Verify</string>
    <string name="view">View</string>
    <string name="save">Save</string>
    <string name="file_data">File Data</string>
    <string name="file_name">File Name</string>
    <string name="data">data</string>
    <string name="edit_file">Filename</string>
</resources>